# kable

./: .env.example  .gitignore  .prettierrc  AZURE_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMAGE_KEYS.md  LICENSE.md  OAUTH_FIX.md  OAUTH_IMPLEMENTATION.md  PRIVACY.md  README.md  SECURITY.md  SETUP.md  TERMS.md  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance_issue.yml  question.yml  refactoring.yml  security.yml
.github/instructions/: copilot-instructions.instructions.md
.github/workflows/: main.yml  nightly.yml
docs/: AUTO_UPDATE_SETUP.md  GITHUB_SECRETS_SETUP.md  SOUND_SYSTEM.md  WIX_INSTALLER.md  WIX_SETUP_SUMMARY.md
examples/icon-templates/: example-svg-template.json
examples/soundpack-example/: README.md  soundpack.json
kable-macros/: Cargo.toml  README.md
kable-macros/src/: lib.rs
scripts/: bump-version.mjs  generate-image-keys.mjs  generate-wix-images.py
src/: app.html  callback.html  error.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  auth_old.rs  custom_symlinks.rs  discord.rs  icons.rs  installations.rs  installations_new.rs  launcher.rs  launcher_old.rs  lib.rs  logging.rs  main.rs  maps.rs  mods.rs  profile.rs  resourcepacks.rs  settings.rs  shaders.rs  skins.rs  sounds.rs  symlink_manager.rs  types.rs  window_state.rs
src-tauri/src/auth/: auth_util.rs  code_flow.rs  device_code_flow.rs  mod.rs  oauth_helpers.rs  secure_token.rs
src-tauri/src/commands/: auth.rs  discord.rs  icons.rs  images.rs  installations.rs  launcher.rs  mod.rs  mods.rs  resourcepacks.rs  shaders.rs  skins.rs  sounds.rs  symlinks.rs  system.rs  updater.rs
src-tauri/src/installations/: kable_profiles.rs  mod.rs  mrpack.rs  profiles.rs  versions.rs
src-tauri/src/launcher/: fabric.rs  forge.rs  java.rs  launchables.rs  mod.rs  utils.rs  vanilla.rs
src-tauri/src/mods/: cache.rs  curseforge.rs  manager.rs  mod.rs  modrinth.rs  modrinth_versions_cache.rs
src-tauri/src/skins/: get_skins.rs  mod.rs  modify_skins.rs  skin_upload.rs  types.rs
src-tauri/tests/: fabric-loader-0.15.7-1.20.4.json  iris-fabric-loader-0.16.10-1.21.4.json  quilt-loader-0.29.1-1.21.8.json
src-tauri/tests/macros/: basic_functionality.rs  impl_blocks.rs  parameter_validation.rs
src-tauri/wix/: README.md  main.wxs
src-tauri/wix/lang/: en-US.wxl  nl-NL.wxl
src-tauri/wix/licenses/: License_en-US.rtf  License_nl-NL.rtf
src/lib/: auth.ts  authService.ts  dataManager.ts  game.ts  index.ts  launcher.ts  runtimeTypes.ts  services.ts  settings.ts  types.d.ts  types.ts  windowStateManager.ts
src/lib/actions/: index.ts  soundActions.ts
src/lib/api/: auth.ts  discord.ts  index.ts  installations.ts  launcher.ts  minecraft.ts  mods.ts  resourcepacks.ts  settings.ts  shaders.ts  skins.ts  symlinks.ts  system.ts  updater.ts
src/lib/components/: AccountManager.svelte  AccountSwitcher.svelte  AuthenticationFlow.svelte  AutoUpdater.svelte  CreateInstallationModal.svelte  EditInstallationModal.svelte  Icon.svelte  Image.svelte  InstallationMods.svelte  InstallationsList.svelte  ModBrowser.svelte  ModCard.svelte  NavBar.svelte  Settings.svelte  TitleBar.svelte  UpdateModal.svelte  index.ts
src/lib/components/auth/: AccountManager.svelte  AccountSwitcher.svelte  AuthenticationFlow.svelte  index.ts
src/lib/components/installations/: CreateInstallationModal.svelte  EditInstallationModal.svelte  InstallationsList.svelte  index.ts
src/lib/components/mods/: InstallationMods.svelte  InstalledModCard.svelte  ModBrowser.svelte  ModCard.svelte  ModVersionModal.svelte  ModpackDiffModal.svelte  index.ts
src/lib/components/notifications/: NotificationContainer.svelte  NotificationToast.svelte  NotificationTray.svelte  index.ts
src/lib/components/resourcepacks/: InstallationResourcePacks.svelte  InstalledResourcePackCard.svelte  ResourcePackBrowser.svelte  ResourcePackCard.svelte  ResourcePackGalleryModal.svelte  index.ts
src/lib/components/setting_categories/: AdvancedSettings.svelte  AppearanceSettings.svelte  GeneralSettings.svelte  LoggingSettings.svelte  MiscSettings.svelte  NetworkSettings.svelte  index.ts
src/lib/components/settings/: AdvancedSettingsUI.svelte  AppearanceSettingsUI.svelte  ContentSettingsUI.svelte  GeneralSettingsUI.svelte  LoggingSettingsUI.svelte  MiscSettingsUI.svelte  NetworkSettingsUI.svelte  SettingsUI.svelte  index.ts
src/lib/components/shaders/: InstallationShaders.svelte  InstalledShaderPackCard.svelte  ShaderBrowser.svelte  ShaderCard.svelte  ShaderGalleryModal.svelte  index.ts
src/lib/components/skins/: PlayerHead.svelte  SkinSelectionMenu.svelte  (+2 more)
src/lib/managers/: AuthManager.ts  DataManager.ts  GameManager.ts  IconManager.ts  InstallationManager.ts  MapsManager.ts  ModsManager.ts  SettingsManager.ts  ShadersManager.ts  SkinsManager.ts  WindowStateManager.ts  index.ts
src/lib/services/: AuthService.ts  DataService.ts  DiscordService.ts  IconService.ts  InstallationService.ts  LaunchService.ts  LauncherService.ts  LogService.ts  MapsService.ts  ModDetectionService.ts  ModsService.ts  NotificationService.ts  ResourcepacksService.ts  SettingsService.ts  ShadersService.ts  SkinsService.ts  SoundService.ts  UpdaterService.ts  WindowStateService.ts  index.ts
src/lib/stores/: auth.ts  index.ts  installation.ts  launcher.ts  logs.ts  mods.ts  resourcepacks.ts  settings.ts  shaders.ts
src/lib/styles/: global.scss
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/advanced/: +page.svelte
src/routes/installations/: +page.svelte
src/routes/logs/: +page.svelte
src/routes/maps/: +page.svelte
src/routes/mods/: +page.svelte
src/routes/profile/: +page.svelte
src/routes/resourcepacks/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/shaders/: +page.svelte
src/routes/skins/: +page.svelte
static/sounds/: README.md
static/themes/: KasaiSora-Theme.css  Modrinth-Theme.css  Official-Theme.css
