[package]
name = "kable"
version = "0.1.9"
description = "A Minecraft Launcher"
authors = ["Luuk Kablan"]
license = ""
repository = "https://github.com/LuckyLuuk12/kable"
edition = "2021"
rust-version = "1.90.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
tauri = { version = "2.9.1", features = [] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-updater = "2.0"
tokio = { version = "1.48.0", features = ["full"] }
dirs = "6.0"
reqwest = { version = "0.12.23", features = ["json", "multipart", "blocking"] }
uuid = { version = "1.18.1", features = ["v4"] }
base64 = "0.22.1"
url = "2.5.7"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"
tiny_http = "0.12"
once_cell = "1.17"
dotenvy = "0.15"
sha2 = "0.10"
zip = "6.0"
sevenz-rust = "0.6.1"
regex = "1.12.2"
sha1 = "0.10"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
hex = "0.4"
minecraft-msa-auth = "0.4.0"
rand = "0.8"
aes-gcm = "0.10"
lazy_static = "1.4"
keyring = "3.6.3"
strum = { version = "0.27", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1.88"
sysinfo = "0.36.1"
kable-macros = { path = "../kable-macros" }
windows-sys = { version = "0.60.2", features = [
  "Win32_System_Threading",
  "Win32_Foundation",
] }
libc = "0.2"
modrinth-api = "2.7.1"
tauri-plugin-clipboard-manager = "2"
toml = "0.9.4"
walkdir = "2"
flate2 = "1.0"
fastnbt = "2.5"
discord-rich-presence = "1.0.0"
resource_merger = "0.1"

# Pin problematic dependencies to avoid edition2024 issues
base64ct = "=1.6.0" # Pin to avoid 1.8.0 which uses edition2024
semver = "1.0.27"

[target.'cfg(target_os = "linux")'.dependencies]
glib = ">=0.20.0"   # Fix: Unsoundness in `Iterator` and `DoubleEndedIterator` impls for `glib::VariantStrIter`

[target.'cfg(target_os = "windows")'.dependencies]
mslnk = "0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
