[package]
name = "kable"
version = "0.1.9"
description = "A Minecraft Launcher"
authors = ["Luuk Kablan"]
license = ""
repository = "https://github.com/LuckyLuuk12/kable"
edition = "2021"
rust-version = "1.90.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0.102"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0"
discord-rich-presence = "1.1.0"
dotenvy = "0.15"
fastnbt = "2.5"
flate2 = "1.1.9"
hex = "0.4"
ico = "0.5"
image = "0.25.9"
kable-macros = { path = "../kable-macros" }
keyring = "3.6.3"
lazy_static = "1.4"
libc = "0.2.182"
minecraft-msa-auth = "0.4.0"
modrinth-api = "2.7.1"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
once_cell = "1.17"
percent-encoding = "2.2"
rand = "0.8.5" # Keep this at 0.8.5 to avoid: unresolved import `rand::rngs::OsRng` --> src\auth\secure_token.rs:9:5
rayon = "1.10"
regex = "1.12.3"
reqwest = { version = "0.12.23", features = ["json", "multipart", "blocking"] } # Keep this at 0.12.23 to avoid conflicts with the minecraft-msa-auth dependency
resource_merger = "0.1"
sanitize-filename = "0.5.0"
sevenz-rust = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34-deprecated"
sha1 = "0.10"
sha2 = "0.10"
strum = { version = "0.28", features = ["derive"] }
sysinfo = "0.38.2"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = "2.10"
thiserror = "2.0.18"
tiny_http = "0.12"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.8"
url = "2.5.8"
urlencoding = "2.1"
uuid = { version = "1.21.0", features = ["v4"] }
walkdir = "2"
windows-sys = { version = "0.61.2", features = [
  "Win32_System_Threading",
  "Win32_Foundation",
] }
zip = "8.1"

# Pin problematic dependencies to avoid edition2024 issues
base64ct = "=1.6.0" # Pin to avoid 1.8.0 which uses edition2024
semver = "1.0.27"

[target.'cfg(target_os = "linux")'.dependencies]
glib = ">=0.20.0"   # Fix: Unsoundness in `Iterator` and `DoubleEndedIterator` impls for `glib::VariantStrIter`

[target.'cfg(target_os = "windows")'.dependencies]
mslnk = "0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
